--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Release 0.2.2 - 2016-11-03
+
+* Make 'columns' config optional and enable schemaless data parsing [#5, #6, #7]
+* Upgraded Embulk version to v0.8.14 [#3]
+
 Release 0.2.1 - 2016-02-24
 
 * Upgraded msgpack-java version to v0.8.3
